--- a/about.html
+++ b/about.html
@@ -5,15 +5,22 @@ subtitle: A Simple Jekyll Blog Theme.
 permalink: /about/
 ---
 
-<h2>About this Blog</h2>
+<h2>Woods Publishing</h2>
 <p>A Simple Jekyll Blog Theme. </p>
 	<p><ul class="about-list">
 		<li><i class="fa fa-rss"></i><a href="{{ site.url }}{{ site.baseurl }}/feed.xml"> Rss</a></li>
 		<li><i class="fa fa-modx"></i> Total <span id="busuanzi_value_site_pv"><i class="fa fa-spinner fa-pulse"></i></span> Hits and <span id="busuanzi_value_site_uv"><i class="fa fa-spinner fa-pulse"></i></span> Visitors</li>
 	</ul></p>
 
-<h2>About me</h2>
-<p>A normal person just wanna see this world. </p>
+<h2>About</h2>
+<p>With a focus on sourcing and developing music for the Asian 
+  market, working with Singers, Entertainers, Film and TV. We 
+  strive to assemble an eclectic mix of producers and songwriters 
+	working in a wide array of genra. </p> <br/>
+
+<p>  As a publisher we hold a wide selection of music on our books. 
+  We can offer advice and creative input where necessaryto make 
+  sure you have a product best suited to your need. </p>
     <p><ul class="about-list">
 		<li>
 			<i class="fa fa-twitter"></i><a href="https://twitter.com/{{ site.twitter_username }}"> Twitter</a>
