--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@ layout: default
 </style>
 
 <center>
-	<p class="index-content">Hello World</p>
+	<h1> Woods Publishing </h1>
+	<p class="index-content">With a focus on sourcing and developing music for the Asian 
+  market, working with Singers, Entertainers, Film and TV. We 
+  strive to assemble an eclectic mix of producers and songwriters 
+		working in a wide array of genra. </p> <br />	
+							<br />
+	
+
+ <p> As a publisher we hold a wide selection of music on our books. 
+  We can offer advice and creative input where necessaryto make 
+  sure you have a product best suited to your need. </p>
 </center>
