--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@ layout: default
 	<h1> Woods Publishing </h1>
 	<img src="{ img.logo.png }" height="100" width="100" />
 	<p class="index-content">With a focus on sourcing and developing music for the Asian 
-  market, working with Singers, Entertainers, Film and TV. We 
-  strive to assemble an eclectic mix of producers and songwriters 
-		working in a wide array of genra.
-As a publisher we hold a wide selection of music on our books. 
-  We can offer advice and creative input where necessaryto make 
-  sure you have a product best suited to your need. </p>
+ 	market, working with Singers, Entertainers, Film and TV. We 
+	strive to assemble an eclectic mix of producers and songwriters working in a wide array of genra.
+	As a publisher we hold a wide selection of music on our books. 
+  	We can offer advice and creative input where necessaryto make 
+  	sure you have a product best suited to your need. </p>
 </center>
