--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 <center>
 	<h1> Woods Publishing </h1>
-	<img src="{ img.logo.png }" height="100" width="100" />
+	<img src="{{ /img/logo.png }}" height="100" width="100" />
 	<p class="index-content">With a focus on sourcing and developing music for the Asian 
  	market, working with Singers, Entertainers, Film and TV. We 
 	strive to assemble an eclectic mix of producers and songwriters working in a wide array of genra.
