--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 
 <center>
 	<h1> Woods Publishing </h1>
-	<img src="{{ site.baseurl }}/img/logo.png" height="500" />
+	<img src="{{ site.baseurl }}/img/logo-small.png" height="500" />
 	<p class="index-content">With a focus on sourcing and developing music for the Asian 
  	market, working with Singers, Entertainers, Film and TV. We 
 	strive to assemble an eclectic mix of producers and songwriters working in a wide array of genra.
