--- a/index.html
+++ b/index.html
@@ -22,4 +22,8 @@ layout: default
 	As a publisher we hold a wide selection of music on our books. 
   	We can offer advice and creative input where necessaryto make 
   	sure you have a product best suited to your need. </p>
+	<br />
+	
+	<p> If you have any enquirys or wish to submit work please contact: alexbirchmedia@gmail.com </p> 
+	
 </center>
