--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@ layout: default
   	sure you have a product best suited to your need. </p>
 	<br />
 	
-	<p> If you have any enquirys or wish to submit work please contact: alexbirchmedia@gmail.com </p> 
+	<p class="index-content"> If you have any enquirys or wish to submit work please contact: alexbirchmedia@gmail.com </p> 
 	
 </center>
