--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 </style>
 
 <center>
-	<h1> Woods Publishing </h1>
+	<h1 style="font-family: 'Spectral SC', serif;" style="font-size:300%;"> Woods Publishing </h1>
 	<img src="{{ site.baseurl }}/img/logo-small.png" height="500" />
 	<p class="index-content">With a focus on sourcing and developing music for the Asian 
  	market, working with Singers, Entertainers, Film and TV. We 
