--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ layout: default
 	<br />
 	<br />
 	As a publisher we hold a wide selection of music on our books. 
-  	We can offer advice and creative input where necessaryto make 
-  	sure you have a product best suited to your need.
+  	We can offer advice and creative input where necessary, ensuring  you have a product 
+	best suited to your need.
 	<br />
 	<br />
 	If you have any enquirys or wish to submit work please contact: alexbirchmedia@gmail.com </p>
